final codes with authorization
