# controllers/authRoutes.js
@@ -4,11 +4,11 @@ import generateToken from "../utils/generateToken.js";
 import { User, validateUser } from "../models/user.js";
 import sgMail from "@sendgrid/mail"
 import jwt from "jsonwebtoken"
-import { sendVerification } from "../services/sendVerification.js";
+import { forgotPasswordVerification, sendVerification } from "../services/sendVerification.js";
 import mongoose from "mongoose";
 
 export const signup = async (req, res) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Auth']
     try {
         const { error } = validateUser(req.body);
 
@@ -43,9 +43,7 @@ export const signup = async (req, res) => {
         // Save the user to the database
 
         // Send a verification email
-        // const errorSendingEmail = sendVerification(user);
-
-        sendVerification(user);
+        sendVerification(user, res);
         await user.save();
         res.status(200).json('User registered successfully');
     } catch (err) {
@@ -53,8 +51,108 @@ export const signup = async (req, res) => {
     }
 }
 
+
+export const signin = async (req, res) => {
+    const { email, password } = req.body;
+    // #swagger.tags = ['Auth']
+
+
+    try {
+        const existingUser = await User.findOne({ email });
+
+        if (!existingUser) {
+            return res.status(404).json("User does not exist")
+        }
+
+        const isPasswordCorrect = await bcrypt.compare(password, existingUser.password);
+
+        if (!isPasswordCorrect) {
+            return res.status(400).json("Invalid credentials")
+        }
+
+        const vierifiedUser = existingUser.verified
+
+        if (!vierifiedUser) {
+            return res.status(400).json("Email is not verified")
+        }
+
+        const token = generateToken({ email: existingUser.email, userId: existingUser._id }, "1h")
+
+        const userInfos = {
+            id: existingUser._id,
+            full_name: existingUser.full_name,
+            email: existingUser.email,
+            subscription: existingUser.subscription,
+            verified: existingUser.verified,
+            mobile: existingUser.mobile,
+            profile_img: existingUser.profile_img
+        }
+        res.status(200).json({ result: userInfos, token })
+    } catch (err) {
+        res.status(500).json("Internal server error!")
+    }
+
+}
+
+export const forgotPassword = async (req, res) => {
+    // #swagger.tags = ['Auth']
+    try {
+
+        const { email } = req.body;
+
+        // Check if the email is valid
+        const emailIsValid = validateEmail(email);
+        if (!emailIsValid) {
+            return res.status(400).send("Email is invalid")
+        }
+
+        sgMail.setApiKey(process.env.SG_API_KEY);
+
+        // Check if user already exists
+        let user = await User.findOne({ email });
+
+        if (!user) {
+            return res.status(400).send('User does not exist');
+        }
+
+        // Send a verification email
+        forgotPasswordVerification(user, res);
+
+        res.status(200).json('Email to Reset password was sent to your email address');
+    } catch (err) {
+        res.status(500).json({ message: err.message });
+    }
+}
+
+export const resetPassword = async (req, res) => {
+    const { newPassword, confirmPassword } = req.body;
+
+    if (newPassword !== confirmPassword) {
+        return res.status(401).send("Passwords do not match")
+    }
+    let token
+    if (req.headers.authorization && req.headers.authorization.split(' ')[0] === 'Bearer') {
+        token = req.headers.authorization.split(' ')[1];
+    } else {
+        return res.status(401).send("Token is not provided");
+    }
+    let decodedData
+    if (token) {
+        decodedData = jwt.verify(token, "bizzkey");
+    }
+
+    const id = decodedData.userId
+
+    const user = await User.findById(id);
+
+    const salt = await bcrypt.genSalt(10);
+    user.password = await bcrypt.hash(newPassword, salt);
+    await user.save();
+    return res.status(200).json("Password updated successfully");
+}
+
 export const verifyEmail = async (req, res) => {
-    // #swagger.tags = ['Users']
+    // #swagger.tags = ['Auth']
     const { token } = req.query;
 
     try {
@@ -75,95 +173,3 @@ export const verifyEmail = async (req, res) => {
         res.status(500).json({ message: err.message });
     }
 }
-
-export const signin = async (req, res) => {
-    const { email, password } = req.body;
-    // #swagger.tags = ['Users']
-
-
-    try {
-        const existingUser = await User.findOne({ email });
-
-        if (!existingUser) {
-            return res.status(404).json({ message: "User does not exist" })
-        }
-
-        const isPasswordCorrect = await bcrypt.compare(password, existingUser.password);
-
-        if (!isPasswordCorrect) {
-            return res.status(400).json({ message: "Invalid credentials" })
-        }
-
-        const vierifiedUser = existingUser.verified
-
-        if (!vierifiedUser) {
-            return res.status(400).json({ message: "Email is not verified" })
-        }
-
-        const token = generateToken({ email: existingUser.email, userId: existingUser._id }, "1h")
-
-        const userInfos = {
-            id: existingUser._id,
-            full_name: existingUser.full_name,
-            email: existingUser.email,
-            subscription: existingUser.subscription,
-            verified: existingUser.verified,
-            mobile: existingUser.mobile,
-            profile_img: existingUser.profile_img
-        }
-        res.status(200).json({ result: userInfos, token })
-    } catch (err) {
-        res.status(500).json({ message: "Internal server error!" })
-    }
-
-}
-
-export const userInfos = async (req, res) => {
-    // #swagger.tags = ['Users']
-    // const { token: token } = req.params;
-
-    try {
-        const { id: id } = req.params;
-
-        const existingUser = await User.findById(id);
-
-        if (!existingUser) {
-            return res.status(404).send('User not found');
-        }
-
-        const userInfos = {
-            id: existingUser._id,
-            full_name: existingUser.full_name,
-            email: existingUser.email,
-            subscription: existingUser.subscription,
-            verified: existingUser.verified,
-            mobile: existingUser.mobile,
-            profile_img: existingUser.profile_img
-        }
-        // Check if the user is verified
-        return res.status(200).json(userInfos);
-    } catch (err) {
-        res.status(401).send(err);
-    }
-}
-
-export const editProfile = async (req, res) => {
-    // #swagger.tags = ['Users']
-    // const { token: token } = req.params;
-
-    try {
-        const { id: id } = req.params;
-        console.log(mongoose.Types.ObjectId.isValid(id))
-
-        const userInfos = req.body
-        if (!mongoose.Types.ObjectId.isValid(id)) return res.status(404).send("No user with that id")
-
-        const updatedUser = await User.findByIdAndUpdate(id, { ...userInfos, id }, { new: true })
-
-        res.status(200).json(updatedUser)
-
-    } catch (err) {
-        res.status(401).send(err);
-    }
-}
-
